--- a/frozen.html
+++ b/frozen.html
@@ -1,1 +1,6 @@
-<h1>Frozen Pizza</h1>
+<!DOCTYPE html>
+<html><head><title>Milkshake</title>
+<body>
+  <a href="index.html">homepage</a>
+  <h1>Milkshake Recipie</h1>
+</body></head></html>
