Update links for milkshake and cereal recipes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head> <title>Odin Recipies</title></head>
 <body><h1>Odin Recipes</h1>
  <h2>Recipies</h2>
-  <a href="recipes/frozen.html">A milkshake</a>
+  <a href="milkshake.html">A milkshake</a>
+  <a href="cereal.html">A Cereal</a>
 </body>
   
 </html>
