Wrap recipe links in an ordered list

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head> <title>Odin Recipies</title></head>
 <body><h1>Odin Recipes</h1>
  <h2>Recipies</h2>
-  <a href="milkshake.html">A milkshake</a>
-  <a href="cereal.html">A Cereal</a>
+ <ol>
+<li><a href="milkshake.html">A milkshake</a></li>  
+  <li><a href="cereal.html">A Cereal</a></li></ol>
 </body>
   
 </html>
