Add target attribute to recipe links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <body><h1>Odin Recipes</h1>
  <h2>Recipies</h2>
  <ol>
-<li><a href="milkshake.html">A milkshake</a></li>  
-  <li><a href="cereal.html">A Cereal</a></li></ol>
+<li><a href="milkshake.html" target="_blank">A milkshake recipie</a></li>  
+  <li><a href="cereal.html" target="_blank">A Cereal recipie</a></li>
+ <li><a href="apple.html" target="_blank">How to eat an apple</li></ol>
 </body>
   
 </html>
